test/files/invalid/bad_token_recovery.stderr
error: unrecognized token `identifier "blabla"`, expected one of "attribute", "enum", "file_extension", "file_identifier", "include", "namespace", "native_include", "root_type", "rpc_service", "struct", "table", "union", end_of_stream
  ┌─ test/files/invalid/bad_token_recovery.fbs:1:1
  │
1 │ blabla "foo";
  │ ^^^^^^

error: Could not read file "test/files/invalid/foo": No such file or directory (os error 2)
  ┌─ test/files/invalid/bad_token_recovery.fbs:3:9
  │
3 │ include "foo";
  │         ^^^^^

